changed name to PyTmcStepper

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = TMC_2209_Raspberry_Pi
+name = PyTmcStepper
 version = 0.7
 author = Christian Köhlke
 author_email = christian@koehlke.de
-description = this is a Python libary to drive a stepper motor with a Trinamic TMC2209 stepper driver and a Raspberry Pi
+description = This is a Python libary to drive a stepper motor with a Trinamic stepper driver and a single board computer like a Raspberry Pi
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/Chr157i4n/TMC2209_Raspberry_Pi
+url = https://github.com/Chr157i4n/PyTmcStepper
 project_urls =
-    Bug Tracker = https://github.com/Chr157i4n/TMC2209_Raspberry_Pi/issues
+    Bug Tracker = https://github.com/Chr157i4n/PyTmcStepper/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
